--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,22 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "skillTypes": {
+    "Languages": [
+      "Delphi",
+      "JavaScript",
+      "React"
+    ],
+    "Web Tools": [
+      "MVC",
+      "ASP.Net",
+      "JQuery"
+    ]
+  }
 }
