--- a/appsettings.json
+++ b/appsettings.json
@@ -7,16 +7,18 @@
     }
   },
   "AllowedHosts": "*",
-  "skillTypes": {
-    "Languages": [
-      "Delphi",
-      "JavaScript",
-      "React"
-    ],
-    "Web Tools": [
-      "MVC",
-      "ASP.Net",
-      "JQuery"
-    ]
-  }
+  "frontEndParameters": {
+    "skillTypes": {
+      "Languages": [
+        "Delphi",
+        "JavaScript",
+        "React"
+      ],
+      "Web Tools": [
+        "MVC",
+        "ASP.Net",
+        "JQuery"
+      ]
+    }
+  },
 }
