--- a/appsettings.json
+++ b/appsettings.json
@@ -8,17 +8,31 @@
   },
   "AllowedHosts": "*",
   "frontEndParameters": {
-    "skillTypes": {
-      "Languages": [
-        "Delphi",
-        "JavaScript",
-        "React"
-      ],
-      "Web Tools": [
-        "MVC",
-        "ASP.Net",
-        "JQuery"
-      ]
-    }
-  },
+    "skillTypes": [
+      {
+        "name": "Languages",
+        "members": [
+          "Delphi",
+          "JavaScript",
+          "React"
+        ]
+      },
+      {
+        "name": "Web Tools",
+        "members": [
+          "MVC",
+          "ASP.Net",
+          "JQuery",
+          "React"
+        ]
+      },
+      {
+        "name": "Database",
+        "members": [
+          "Microsoft SQL",
+          "Interbase"
+        ]
+      }
+    ]
+  }
 }
