--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^5.1.0",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.5.1",
+    "linq": "^4.0.0",
     "merge": "^2.1.1",
+    "moment": "^2.29.1",
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
