More Resume data and some work on the Chart

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,24 +13,104 @@
         "name": "Languages",
         "members": [
           "Delphi",
-          "JavaScript",
-          "C#"
+          "JavaScript/TypeScript",
+          "C#",
+          "Python"
         ]
       },
       {
-        "name": "Web Tools",
+        "name": "Development Framewords and Tools",
+        "members": [
+          "ASP.NET",
+          ".NET Core",
+          "XML",
+          "JSON",
+          "gRPC",
+          "RESTful API",
+          "NodeJS",
+          "Unit Test"
+        ]
+      },
+      {
+        "name": "Web Frameworks",
         "members": [
           "MVC",
           "ASP.Net",
-          "JQuery",
-          "React"
+          "jQuery",
+          "React",
+          "Redux/Mobx",
+          "CSS3/SCSS/LESS",
+          "Material Design",
+          "Bootstrap",
+          "ANTD",
+          "D3.js",
+          "C3.js"
         ]
       },
       {
-        "name": "Database",
+        "name": "Database and Database Frameworks",
         "members": [
           "Microsoft SQL",
-          "Interbase"
+          "SQLite",
+          "MySQL",
+          "PostgreSQL",
+          "Interbase",
+          "MongoDB",
+          "EF/EFCore",
+          "OrmLite"
+        ]
+      },
+      {
+        "name": "Cloud, Services and Micro-Services",
+        "members": [
+          "Windows Services",
+          "Docker",
+          "Kubernetes",
+          "Kafka/KafkaStream",
+          "RabitMQ",
+          "Dapr",
+          "Ocelot"
+        ]
+      },
+      {
+        "name": "Development Practices and Tools",
+        "members": [
+          "Agile",
+          "TeamCity",
+          "Octopus",
+          "SVN",
+          "Git",
+          "Azure DevOps"
+
+        ]
+      },
+      {
+        "name": "Reports and Data Mining",
+        "members": [
+          "Yellowfin",
+          "DevExpress",
+          "Microsoft Report Builder",
+          "Tableau",
+          "ReChart"
+        ]
+      },
+      {
+        "name": "Media Tools",
+        "members": [
+          "Adobe Photoshop",
+          "Adobe Premiere",
+          "Adobe After Effects",
+          "AutoDesk 3D Studio",
+          "AutoDesk Fusion 360"
+        ]
+      },
+      {
+        "name": "Authentication and Authorization Frameworks and Tools",
+        "members": [
+          "Windows Active Directory",
+          "OAuth 2.0",
+          "Auth0",
+          "SAML 2.0"
         ]
       }
     ]
