Temp code for backup

--- a/appsettings.json
+++ b/appsettings.json
@@ -39,7 +39,7 @@
           "jQuery",
           "React",
           "Redux/Mobx",
-          "CSS3/SCSS/LESS",
+          "CSS/CSS3/SCSS/LESS",
           "Material Design",
           "Bootstrap",
           "ANTD",
