Added Hobbies, technical skills two columns and "Used:"

--- a/appsettings.json
+++ b/appsettings.json
@@ -26,9 +26,17 @@
           "XML",
           "JSON",
           "gRPC",
-          "RESTful API",
           "NodeJS",
           "Unit Test"
+        ]
+      },
+      {
+        "name": "Communication Framewords",
+        "members": [
+          "RESTful API",
+          "TCP/IP",
+          "SOAP API",
+          "Serial Communication"
         ]
       },
       {
@@ -107,7 +115,7 @@
         ]
       },
       {
-        "name": "Authentication and Authorization Frameworks and Tools",
+        "name": "Authentication/Authorization Frameworks and Tools",
         "members": [
           "Windows Active Directory",
           "OAuth 2.0",
