--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "frontEndParameters": {
+    "showYearsOfExperience": true,
+    "skillPriorityView": false,
     "skillTypes": [
       {
         "name": "Languages",
@@ -36,6 +38,7 @@
           "RESTful API",
           "TCP/IP",
           "SOAP API",
+          "Web Services",
           "Serial Communication"
         ]
       },
@@ -43,10 +46,9 @@
         "name": "Web Frameworks",
         "members": [
           "MVC",
-          "ASP.Net",
           "jQuery",
           "React",
-          "Redux/Mobx",
+          "Redux",
           "CSS/CSS3/SCSS/LESS",
           "Material Design",
           "Bootstrap",
@@ -77,7 +79,8 @@
           "Kafka/KafkaStream",
           "RabitMQ",
           "Dapr",
-          "Ocelot"
+          "AWS",
+          "AZURE"
         ]
       },
       {
@@ -89,7 +92,6 @@
           "SVN",
           "Git",
           "Azure DevOps"
-
         ]
       },
       {
@@ -120,7 +122,8 @@
           "Windows Active Directory",
           "OAuth 2.0",
           "Auth0",
-          "SAML 2.0"
+          "SAML 2.0",
+          "JWT"
         ]
       }
     ]
