--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,6 +11,7 @@
     "merge": "^2.1.1",
     "moment": "^2.29.1",
     "oidc-client": "^1.11.5",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.25.0",
