--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
   "frontEndParameters": {
     "showYearsOfExperience": true,
-    "skillPriorityView": false,
+    "workExperienceViewType": "Skills",
+    "skillTrend": true,
     "skillTypes": [
       {
         "name": "Languages",
