Added skill organized view and hide Hobbies toggle

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -15,6 +15,7 @@
   },
   "AllowedHosts": "*",
   "frontEndParameters": {
+    "workExperienceViewType": "Jobs",
     "skillTrend": false,
     "skillTypes": []
   }
