--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "frontEndParameters": {
     "showYearsOfExperience": true,
-    "workExperienceViewType": "Skills",
+    "workExperienceViewType": "SpecificSkill|Web Frameworks",
     "skillTrend": true,
     "skillTypes": [
       {
