--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "frontEndParameters": {
     "showYearsOfExperience": true,
-    "workExperienceViewType": "SpecificSkill|Web Frameworks",
+    "workExperienceViewType": "Jobs",
     "skillTrend": true,
     "skillTypes": [
       {
@@ -18,7 +18,8 @@
           "Delphi",
           "JavaScript/TypeScript",
           "C#",
-          "Python"
+          "Python",
+          "C++"
         ]
       },
       {
