--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^4.18.9",
     "bootstrap": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.5.1",
     "linq": "^4.0.0",
