--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,8 @@
   "frontEndParameters": {
     "showYearsOfExperience": true,
     "workExperienceViewType": "Jobs",
+    //"workExperienceViewType": "Skills",
+    //"workExperienceViewType": "SpecificSkill|Languages",
     "skillTrend": true,
     "skillTypes": [
       {
