--- a/appsettings.json
+++ b/appsettings.json
@@ -33,7 +33,8 @@
           "JSON",
           "gRPC",
           "NodeJS",
-          "Unit Test"
+          "Unit Test",
+          "Xamarin for Android"
         ]
       },
       {
