General Spelling mistakes

--- a/appsettings.json
+++ b/appsettings.json
@@ -25,7 +25,7 @@
         ]
       },
       {
-        "name": "Development Framewords and Tools",
+        "name": "Development Frameworks and Tools",
         "members": [
           "ASP.NET",
           ".NET Core",
@@ -34,11 +34,12 @@
           "gRPC",
           "NodeJS",
           "Unit Test",
-          "Xamarin for Android"
+          "Xamarin for Android",
+          "Arduino"
         ]
       },
       {
-        "name": "Communication Framewords",
+        "name": "Communication Frameworks",
         "members": [
           "RESTful API",
           "TCP/IP",
