Updated with latest job

--- a/appsettings.json
+++ b/appsettings.json
@@ -18,7 +18,7 @@
         "name": "Languages",
         "members": [
           "Delphi",
-          "JavaScript/TypeScript",
+          "JavaScript",
           "C#",
           "Python",
           "C++"
@@ -55,6 +55,7 @@
           "jQuery",
           "React",
           "Redux",
+          "Bootstrap",
           "CSS/CSS3/SCSS/LESS",
           "Material Design",
           "Bootstrap",
